# klawa

./: .gitignore  .justfile  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  vercel.json
.github/workflows/: build-and-test.yml
examples/adamws-config/: README.md  config
examples/custom-keycap-asset/: README.md  config
examples/custom-split-layout/: README.md  config
examples/customized-pok3r-theme/: README.md  config
examples/no-keyboard-visualization/: README.md  config
resources/: default.config  my_pok3r_layout.json
src/: atreus.json  config.zig  ffmpeg.zig  ini.zig  keyboard.h  keyboard.h.in  keyboard.zig  keyboard.zig.in  kle.zig  layout.zig  layout_labels.zig  main.c  main.zig  math.zig  spsc_queue.zig  strings.zig  symbols_lookup.zig  tests.zig  textures.zig  tracy.zig  watch.zig  win32.zig  x11.zig
src/resources/: keyboard-layout.json
src/resources/layouts/: 60_abnt2.json  60_ansi.json  60_ansi_arrow.json  60_ansi_tsangan.json  60_ansi_wkl.json  60_hhkb.json  60_iso.json  60_iso_arrow.json  60_iso_tsangan.json  60_iso_wkl.json  60_jis.json  60_tsangan_hhkb.json  64_ansi.json  64_iso.json  65_ansi.json  65_ansi_blocker.json  65_ansi_blocker_tsangan.json  65_iso.json  65_iso_blocker.json  65_iso_blocker_tsangan.json  66_ansi.json  66_iso.json  68_ansi.json  68_iso.json  (+41 more)
tests/: .gitignore  deploy.sh  dev-requirements.txt  index.html  pytest.ini  test.sh  vercel.json
tests/data/: atreus.json
tests/src/: conftest.py  test_rendering.py
tools/: genkeyboard.py  requirements.txt
tools/atlas-generator/: build.zig  build.zig.zon
(+1 files in other folders)
